[package]
name = "radius-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
bellpepper-core = "0.4.0"
bellperson = { version = "0.25", default-features = false }
ff = "0.13.0"
nova = { git = "https://github.com/wyattbenno777/arecibo", branch = "feat/nebula", package = "arecibo" }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
serde_json = "1.0.133"
